<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_apps"
            android:icon="@drawable/ic_menu_apps"
            android:title="@string/menu_apps" />
        <item
            android:id="@+id/nav_devices"
            android:icon="@drawable/ic_menu_devices"
            android:title="@string/menu_devices" />
        <item
            android:id="@+id/nav_network"
            android:icon="@drawable/ic_menu_networks"
            android:title="@string/menu_networks" />
    </group>
</menu>